# serializer version: 1
# name: test_delete
  '''
  [DEBUG] hass_nabucasa.files: Deleting test file with name lorem.ipsum
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for storage_file_delete
  [DEBUG] hass_nabucasa.api: Sending DELETE request to servicehandlers.example.com/files
  [DEBUG] hass_nabucasa.api: Response for delete from servicehandlers.example.com/files (200) 
  '''
# ---
# name: test_download
  '''
  [DEBUG] hass_nabucasa.files: Downloading test file with name lorem.ipsum
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for storage_file_download
  [DEBUG] hass_nabucasa.api: Sending GET request to servicehandlers.example.com/files/download_details/test/lorem.ipsum
  [DEBUG] hass_nabucasa.api: Response for get from servicehandlers.example.com/files/download_details/test/lorem.ipsum (200) 
  [DEBUG] hass_nabucasa.api: Sending GET request to files.api.fakeurl
  [DEBUG] hass_nabucasa.api: Response for get from files.api.fakeurl?X-Amz-Algorithm=*** (200) 
  '''
# ---
# name: test_exceptions_while_deleting[Failed to fetch: (400) -deletemockargs0]
  '''
  [DEBUG] hass_nabucasa.files: Deleting test file with name lorem.ipsum
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for storage_file_delete
  [DEBUG] hass_nabucasa.api: Sending DELETE request to servicehandlers.example.com/files
  [DEBUG] hass_nabucasa.api: Response for delete from servicehandlers.example.com/files (400) NC-CE-01
  '''
# ---
# name: test_exceptions_while_deleting[Failed to fetch: (500) -deletemockargs1]
  '''
  [DEBUG] hass_nabucasa.files: Deleting test file with name lorem.ipsum
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for storage_file_delete
  [DEBUG] hass_nabucasa.api: Sending DELETE request to servicehandlers.example.com/files
  [DEBUG] hass_nabucasa.api: Response for delete from servicehandlers.example.com/files (500) 
  '''
# ---
# name: test_list
  '''
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for storage_files
  [DEBUG] hass_nabucasa.api: Sending GET request to servicehandlers.example.com/v2/files/test
  [DEBUG] hass_nabucasa.api: Response for get from servicehandlers.example.com/v2/files/test (200) 
  '''
# ---
# name: test_list_with_clear_cache
  '''
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for storage_files
  [DEBUG] hass_nabucasa.api: Sending GET request to servicehandlers.example.com/v2/files/test
  [DEBUG] hass_nabucasa.api: Response for get from servicehandlers.example.com/v2/files/test?clearCache=true (200) 
  '''
# ---
# name: test_upload
  '''
  [DEBUG] hass_nabucasa.files: Uploading test file with name lorem.ipsum
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for storage_file_upload
  [DEBUG] hass_nabucasa.api: Sending GET request to servicehandlers.example.com/files/upload_details
  [DEBUG] hass_nabucasa.api: Response for get from servicehandlers.example.com/files/upload_details (200) 
  [DEBUG] hass_nabucasa.api: Sending PUT request to files.api.fakeurl
  [DEBUG] hass_nabucasa.api: Response for put from files.api.fakeurl?X-Amz-Algorithm=*** (200) 
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for storage_files
  [DEBUG] hass_nabucasa.api: Sending GET request to servicehandlers.example.com/v2/files/test
  [DEBUG] hass_nabucasa.api: Response for get from servicehandlers.example.com/v2/files/test (200) 
  '''
# ---
# name: test_upload_bad_status_while_downloading[FilesError-getmockargs0]
  '''
  [DEBUG] hass_nabucasa.files: Downloading test file with name lorem.ipsum
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for storage_file_download
  [DEBUG] hass_nabucasa.api: Sending GET request to servicehandlers.example.com/files/download_details/test/lorem.ipsum
  [DEBUG] hass_nabucasa.api: Response for get from servicehandlers.example.com/files/download_details/test/lorem.ipsum (200) 
  [DEBUG] hass_nabucasa.api: Sending GET request to files.api.fakeurl
  [DEBUG] hass_nabucasa.api: Response for get from files.api.fakeurl?X-Amz-Algorithm=*** (400) 
  '''
# ---
# name: test_upload_bad_status_while_downloading[FilesError-getmockargs1]
  '''
  [DEBUG] hass_nabucasa.files: Downloading test file with name lorem.ipsum
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for storage_file_download
  [DEBUG] hass_nabucasa.api: Sending GET request to servicehandlers.example.com/files/download_details/test/lorem.ipsum
  [DEBUG] hass_nabucasa.api: Response for get from servicehandlers.example.com/files/download_details/test/lorem.ipsum (200) 
  [DEBUG] hass_nabucasa.api: Sending GET request to files.api.fakeurl
  [DEBUG] hass_nabucasa.api: Response for get from files.api.fakeurl?X-Amz-Algorithm=*** (500) 
  '''
# ---
# name: test_upload_bad_status_while_getting_download_details[CloudApiNonRetryableError-getmockargs0]
  '''
  [DEBUG] hass_nabucasa.files: Downloading test file with name lorem.ipsum
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for storage_file_download
  [DEBUG] hass_nabucasa.api: Sending GET request to servicehandlers.example.com/files/download_details/test/lorem.ipsum
  [DEBUG] hass_nabucasa.api: Response for get from servicehandlers.example.com/files/download_details/test/lorem.ipsum (400) NC-SH-FH-03 (abc-123)
  '''
# ---
# name: test_upload_bad_status_while_getting_download_details[CloudApiNonRetryableError-getmockargs1]
  '''
  [DEBUG] hass_nabucasa.files: Downloading test file with name lorem.ipsum
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for storage_file_download
  [DEBUG] hass_nabucasa.api: Sending GET request to servicehandlers.example.com/files/download_details/test/lorem.ipsum
  [DEBUG] hass_nabucasa.api: Response for get from servicehandlers.example.com/files/download_details/test/lorem.ipsum (400) NC-CE-03
  '''
# ---
# name: test_upload_bad_status_while_getting_download_details[FilesError-getmockargs2]
  '''
  [DEBUG] hass_nabucasa.files: Downloading test file with name lorem.ipsum
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for storage_file_download
  [DEBUG] hass_nabucasa.api: Sending GET request to servicehandlers.example.com/files/download_details/test/lorem.ipsum
  [DEBUG] hass_nabucasa.api: Response for get from servicehandlers.example.com/files/download_details/test/lorem.ipsum (400) NC-CE-01
  '''
# ---
# name: test_upload_bad_status_while_getting_download_details[FilesError-getmockargs3]
  '''
  [DEBUG] hass_nabucasa.files: Downloading test file with name lorem.ipsum
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for storage_file_download
  [DEBUG] hass_nabucasa.api: Sending GET request to servicehandlers.example.com/files/download_details/test/lorem.ipsum
  [DEBUG] hass_nabucasa.api: Response for get from servicehandlers.example.com/files/download_details/test/lorem.ipsum (500) 
  '''
# ---
# name: test_upload_bad_status_while_getting_upload_details[CloudApiNonRetryableError-getmockargs1]
  '''
  [DEBUG] hass_nabucasa.files: Uploading test file with name lorem.ipsum
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for storage_file_upload
  [DEBUG] hass_nabucasa.api: Sending GET request to servicehandlers.example.com/files/upload_details
  [DEBUG] hass_nabucasa.api: Response for get from servicehandlers.example.com/files/upload_details (400) NC-CE-03
  '''
# ---
# name: test_upload_bad_status_while_getting_upload_details[FilesError-getmockargs0]
  '''
  [DEBUG] hass_nabucasa.files: Uploading test file with name lorem.ipsum
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for storage_file_upload
  [DEBUG] hass_nabucasa.api: Sending GET request to servicehandlers.example.com/files/upload_details
  [DEBUG] hass_nabucasa.api: Response for get from servicehandlers.example.com/files/upload_details (400) NC-CE-01
  '''
# ---
# name: test_upload_bad_status_while_getting_upload_details[FilesError-getmockargs2]
  '''
  [DEBUG] hass_nabucasa.files: Uploading test file with name lorem.ipsum
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for storage_file_upload
  [DEBUG] hass_nabucasa.api: Sending GET request to servicehandlers.example.com/files/upload_details
  [DEBUG] hass_nabucasa.api: Response for get from servicehandlers.example.com/files/upload_details (500) 
  '''
# ---
# name: test_upload_bad_status_while_uploading[FilesError-putmockargs0]
  '''
  [DEBUG] hass_nabucasa.files: Uploading test file with name lorem.ipsum
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for storage_file_upload
  [DEBUG] hass_nabucasa.api: Sending GET request to servicehandlers.example.com/files/upload_details
  [DEBUG] hass_nabucasa.api: Response for get from servicehandlers.example.com/files/upload_details (200) 
  [DEBUG] hass_nabucasa.api: Sending PUT request to files.api.fakeurl
  [DEBUG] hass_nabucasa.api: Response for put from files.api.fakeurl?X-Amz-Algorithm=*** (400) 
  '''
# ---
# name: test_upload_bad_status_while_uploading[FilesError-putmockargs1]
  '''
  [DEBUG] hass_nabucasa.files: Uploading test file with name lorem.ipsum
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for storage_file_upload
  [DEBUG] hass_nabucasa.api: Sending GET request to servicehandlers.example.com/files/upload_details
  [DEBUG] hass_nabucasa.api: Response for get from servicehandlers.example.com/files/upload_details (200) 
  [DEBUG] hass_nabucasa.api: Sending PUT request to files.api.fakeurl
  [DEBUG] hass_nabucasa.api: Response for put from files.api.fakeurl?X-Amz-Algorithm=*** (500) 
  '''
# ---
# name: test_upload_exceptions_while_uploading[putmockargs0-Timeout reached while calling API: total allowed time is 43200.0 seconds]
  '''
  [DEBUG] hass_nabucasa.files: Uploading test file with name lorem.ipsum
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for storage_file_upload
  [DEBUG] hass_nabucasa.api: Sending GET request to servicehandlers.example.com/files/upload_details
  [DEBUG] hass_nabucasa.api: Response for get from servicehandlers.example.com/files/upload_details (200) 
  [DEBUG] hass_nabucasa.api: Sending PUT request to files.api.fakeurl
  '''
# ---
# name: test_upload_exceptions_while_uploading[putmockargs1-Failed to fetch: Boom!]
  '''
  [DEBUG] hass_nabucasa.files: Uploading test file with name lorem.ipsum
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for storage_file_upload
  [DEBUG] hass_nabucasa.api: Sending GET request to servicehandlers.example.com/files/upload_details
  [DEBUG] hass_nabucasa.api: Response for get from servicehandlers.example.com/files/upload_details (200) 
  [DEBUG] hass_nabucasa.api: Sending PUT request to files.api.fakeurl
  '''
# ---
# name: test_upload_exceptions_while_uploading[putmockargs2-Unexpected error while calling API: Boom!]
  '''
  [DEBUG] hass_nabucasa.files: Uploading test file with name lorem.ipsum
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for storage_file_upload
  [DEBUG] hass_nabucasa.api: Sending GET request to servicehandlers.example.com/files/upload_details
  [DEBUG] hass_nabucasa.api: Response for get from servicehandlers.example.com/files/upload_details (200) 
  [DEBUG] hass_nabucasa.api: Sending PUT request to files.api.fakeurl
  '''
# ---
# name: test_upload_exceptions_while_uploading[putmockargs3-Failed to upload: (400) ]
  '''
  [DEBUG] hass_nabucasa.files: Uploading test file with name lorem.ipsum
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for storage_file_upload
  [DEBUG] hass_nabucasa.api: Sending GET request to servicehandlers.example.com/files/upload_details
  [DEBUG] hass_nabucasa.api: Response for get from servicehandlers.example.com/files/upload_details (200) 
  [DEBUG] hass_nabucasa.api: Sending PUT request to files.api.fakeurl
  [DEBUG] hass_nabucasa.api: Response for put from files.api.fakeurl?X-Amz-Algorithm=*** (400) 
  '''
# ---
# name: test_upload_exceptions_while_uploading[putmockargs4-Failed to upload: (400) Unknown error structure]
  '''
  [DEBUG] hass_nabucasa.files: Uploading test file with name lorem.ipsum
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for storage_file_upload
  [DEBUG] hass_nabucasa.api: Sending GET request to servicehandlers.example.com/files/upload_details
  [DEBUG] hass_nabucasa.api: Response for get from servicehandlers.example.com/files/upload_details (200) 
  [DEBUG] hass_nabucasa.api: Sending PUT request to files.api.fakeurl
  [DEBUG] hass_nabucasa.api: Response for put from files.api.fakeurl?X-Amz-Algorithm=*** (400) 
  '''
# ---
# name: test_upload_exceptions_while_uploading[putmockargs5-Failed to upload: (400) Pretty error With a linebreak]
  '''
  [DEBUG] hass_nabucasa.files: Uploading test file with name lorem.ipsum
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for storage_file_upload
  [DEBUG] hass_nabucasa.api: Sending GET request to servicehandlers.example.com/files/upload_details
  [DEBUG] hass_nabucasa.api: Response for get from servicehandlers.example.com/files/upload_details (200) 
  [DEBUG] hass_nabucasa.api: Sending PUT request to files.api.fakeurl
  [DEBUG] hass_nabucasa.api: Response for put from files.api.fakeurl?X-Amz-Algorithm=*** (400) 
  '''
# ---
# name: test_upload_exceptions_while_uploading[putmockargs6-Failed to upload: (400) <Message>What is this?]
  '''
  [DEBUG] hass_nabucasa.files: Uploading test file with name lorem.ipsum
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for storage_file_upload
  [DEBUG] hass_nabucasa.api: Sending GET request to servicehandlers.example.com/files/upload_details
  [DEBUG] hass_nabucasa.api: Response for get from servicehandlers.example.com/files/upload_details (200) 
  [DEBUG] hass_nabucasa.api: Sending PUT request to files.api.fakeurl
  [DEBUG] hass_nabucasa.api: Response for put from files.api.fakeurl?X-Amz-Algorithm=*** (400) 
  '''
# ---
# name: test_upload_exceptions_while_uploading[putmockargs7-Failed to upload: (400) aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa]
  '''
  [DEBUG] hass_nabucasa.files: Uploading test file with name lorem.ipsum
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for storage_file_upload
  [DEBUG] hass_nabucasa.api: Sending GET request to servicehandlers.example.com/files/upload_details
  [DEBUG] hass_nabucasa.api: Response for get from servicehandlers.example.com/files/upload_details (200) 
  [DEBUG] hass_nabucasa.api: Sending PUT request to files.api.fakeurl
  [DEBUG] hass_nabucasa.api: Response for put from files.api.fakeurl?X-Amz-Algorithm=*** (400) 
  '''
# ---
# name: test_upload_exceptions_while_uploading[putmockargs8-Failed to upload: (403) Pretty error With a linebreak]
  '''
  [DEBUG] hass_nabucasa.files: Uploading test file with name lorem.ipsum
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for storage_file_upload
  [DEBUG] hass_nabucasa.api: Sending GET request to servicehandlers.example.com/files/upload_details
  [DEBUG] hass_nabucasa.api: Response for get from servicehandlers.example.com/files/upload_details (200) 
  [DEBUG] hass_nabucasa.api: Sending PUT request to files.api.fakeurl
  [DEBUG] hass_nabucasa.api: Response for put from files.api.fakeurl?X-Amz-Algorithm=*** (403) 
  '''
# ---
# name: test_upload_exceptions_while_uploading[putmockargs9-Failed to upload: (500) ]
  '''
  [DEBUG] hass_nabucasa.files: Uploading test file with name lorem.ipsum
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for storage_file_upload
  [DEBUG] hass_nabucasa.api: Sending GET request to servicehandlers.example.com/files/upload_details
  [DEBUG] hass_nabucasa.api: Response for get from servicehandlers.example.com/files/upload_details (200) 
  [DEBUG] hass_nabucasa.api: Sending PUT request to files.api.fakeurl
  [DEBUG] hass_nabucasa.api: Response for put from files.api.fakeurl?X-Amz-Algorithm=*** (500) 
  '''
# ---
# name: test_upload_returning_403_and_expired_subscription
  '''
  [DEBUG] hass_nabucasa.files: Uploading test file with name lorem.ipsum
  [INFO] hass_nabucasa.service_discovery: Using fallback action URL for storage_file_upload
  [DEBUG] hass_nabucasa.api: Sending GET request to servicehandlers.example.com/files/upload_details
  [DEBUG] hass_nabucasa.api: Response for get from servicehandlers.example.com/files/upload_details (403) Forbidden
  '''
# ---
